--- a/ofertas.html
+++ b/ofertas.html
@@ -87,6 +87,7 @@
           <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal1">
             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
               <div class="portfolio-item-caption-content text-center text-white">
+                <i class="fas fa-share fa-3x"></i>
               </div>
             </div>
             <img class="img-fluid" style="height: 286px;" src="img/portfolio/Leite.jpg" alt="">
@@ -101,6 +102,7 @@
           <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal2">
             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
               <div class="portfolio-item-caption-content text-center text-white">
+                <i class="fas fa-share fa-3x"></i>
               </div>
             </div>
             <img class="img-fluid" style="height: 286px;" src="img/portfolio/Café.jpg" alt="">
@@ -115,6 +117,7 @@
           <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal3">
             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
               <div class="portfolio-item-caption-content text-center text-white">
+                <i class="fas fa-share fa-3x"></i>
               </div>
             </div>
             <img class="img-fluid" style="height: 286px;" src="img/portfolio/Açucar.jpg" alt="">
@@ -267,6 +270,7 @@
             <div class="row justify-content-center">
               <div class="col-lg-8">
                 <!-- Ofertas Modal - Title -->
+                <h2 class="Ofertas-modal-title text-secondary text-uppercase mb-0">Compartilhe e Pontue</h2>
                 <!-- Icon Divider -->
                 <div class="divider-custom">
                   <div class="divider-custom-line"></div>
@@ -276,8 +280,12 @@
                   <div class="divider-custom-line"></div>
                 </div>
                 <!-- Ofertas Modal - Image -->
+                <img class="img-fluid rounded mb-5" src="img/portfolio/Leite.jpg" alt="">
                 <!-- Ofertas Modal - Text -->
+                <p class="mb-5">R$19,08</p>
+                
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
+                  <i class="fas fa-share"></i>
                   Close Window
                 </button>
               </div>
@@ -302,6 +310,7 @@
             <div class="row justify-content-center">
               <div class="col-lg-8">
                 <!-- Ofertas Modal - Title -->
+                <h2 class="Ofertas-modal-title text-secondary text-uppercase mb-0">Compartilhe e Pontue</h2>
                 <!-- Icon Divider -->
                 <div class="divider-custom">
                   <div class="divider-custom-line"></div>
@@ -311,8 +320,11 @@
                   <div class="divider-custom-line"></div>
                 </div>
                 <!-- Ofertas Modal - Image -->
+                <img class="img-fluid rounded mb-5" src="img/portfolio/Café.jpg" alt="">
                 <!-- Ofertas Modal - Text -->
+                <p class="mb-5">R$8,00</p>
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
+                  <i class="fas fa-share"></i>
                   Close Window
                 </button>
               </div>
@@ -329,6 +341,7 @@
       <div class="modal-content">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">
+            <i class="fas fa-times" ></i>
           </span>
         </button>
         <div class="modal-body text-center">
@@ -336,6 +349,7 @@
             <div class="row justify-content-center">
               <div class="col-lg-8">
                 <!-- Ofertas Modal - Title -->
+                <h2 class="Ofertas-modal-title text-secondary text-uppercase mb-0">Compartilhe e Pontue</h2>
                 <!-- Icon Divider -->
                 <div class="divider-custom">
                   <div class="divider-custom-line"></div>
@@ -345,8 +359,11 @@
                   <div class="divider-custom-line"></div>
                 </div>
                 <!-- Ofertas Modal - Image -->
+                <img class="img-fluid rounded mb-5" src="img/portfolio/Açucar.jpg" alt="">
                 <!-- Ofertas Modal - Text -->
+                <p class="mb-5">R$7,30</p>
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
+                  <i class="fas fa-share"></i>
                   Close Window
                 </button>
               </div>
